DuPont DevSB/src/objects/ccrz__E_Permissions__c.object
<CustomObject>
    <fields>
        <fullName>ccrz__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>E_Permissions</relationshipLabel>
        <relationshipName>E_Permissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__PreventCheckout__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PreventCheckout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>E_Permissions</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>E_Permissions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>E_Permissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>